# aot

./: .gitignore  .gitmodules  BUILD_MACOS.md  CMakeLists.my  CMakeLists.txt  GERMAN_DICT_REBUILD.md  README.md  README_RU.md  REBUILD_SUMMARY.md  agid.tar.bz2  fast_build.sh  high_freq_lemmas.txt  lldb_cmds.txt  lldb_crash_2.txt  lldb_crash_3.txt  reproduce_bug.cpp  reproduce_crash.py  reproduce_crash_6_2.py  reproduce_ukr.cpp  rml.ini  run_lldb.py  start_all.sh  test_chars.py
Dicts/SrcBinDict/: high_freq.eng
Docs/: cpp_components.md  english_resources.md  syntactic_relations.md  unimorph_to_aot_v4.md  web_interface.md
Scripts/: README.md  add_ukrainian_lemmas.py
Source/: CMakeLists.txt
Source/synan/UkrSynanLib/: CMakeLists.txt  UkrFormatCaller.cpp  UkrFormatCaller.h  UkrOborDic.cpp  UkrOborDic.h  UkrSentence.cpp  UkrSentence.h  UkrSyntaxOpt.cpp  UkrSyntaxOpt.h  UkrThesaurus.h
Source/www/: CMakeLists.txt
Source/www/SynanDaemon/: CMakeLists.txt  JVisualSynAnParamBuilder.cpp  JVisualSynAnParamBuilder.h  Main.cpp  SynanDmn.cpp  SynanDmn.h
Source/www/wwwroot/: aot.css  index.html  onlinedemo.html
Source/www/wwwroot/demo/: bigrams.html  bigrams.js  common.js  custom.css  eng_legal.html  graph.html  legal_theme.css  morph.html  morph.js  rus_legal.html  synan.js  synan_eng_legal.js  synan_legal.js  synan_rus_legal.js  synt.html  translat.html  ukr_legal.html
Source/www/wwwroot/modern/: app.js  index.css  index.html  syntax-visualizer.js
dev/: eng_rebuild.sh
dev/tasks/: p0.md
patches/: morph_dict-common-cmakelists.patch
tests/: test_punctuation.py
(+77 files in other folders)
